// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordions renders a customized accordion 1`] = `
<div class="padded-container flex items-center w-52">
  <div class="text-vanilla-100 w-full">
    <div class="z-accordion-item text-vanilla-200">
      <div class="flex items-center cursor-pointer w-full"><span class="flex-1 font-medium text-slate">Resources</span> <svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="transform z-icon w-4 h-4 z-icon--chevron-right text-slate animate-reverse-quarter-spin rotate-0">
          <polyline points="9 18 15 12 9 6"></polyline>
        </svg></div>
      <div class="overflow-hidden transition-max-height duration-300 ease-in-out text-sm leading-6 max-h-0">
        <div class="flex flex-col text-sm space-y-4 py-3"><a href="#" class="hover:text-juniper transition-all duration-75 ease-in-out">Documentation</a><a href="#" class="hover:text-juniper transition-all duration-75 ease-in-out">Discourse Form</a><a href="#" class="hover:text-juniper transition-all duration-75 ease-in-out">Learning Center</a><a href="#" class="hover:text-juniper transition-all duration-75 ease-in-out">Blog</a><a href="#" class="hover:text-juniper transition-all duration-75 ease-in-out">Slack User Group</a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordions renders a default accordion 1`] = `
<div class="text-vanilla-100">
  <div class="z-accordion-item text-vanilla-200">
    <div class="flex items-center transition-all duration-700 ease-in-out group cursor-pointer"><span class="flex-1 font-medium">Consistency</span> <svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="transform transition-all duration-DEFAULT ease-in-out group stroke-1.5 z-icon w-6 h-6 z-icon--chevron-right text-slate group-hover:text-vanilla-200">
        <polyline points="9 18 15 12 9 6"></polyline>
      </svg></div>
    <div class="overflow-hidden transition-max-height duration-300 ease-in-out text-sm leading-6 max-h-0">
      <div>Consistent with real life: in line with the process and logic of real life, and comply with languages and habits that the users are used to;</div>
      <div>Consistent within interface: all elements should be consistent, such as: design style, icons and texts, position of elements, etc.</div>
    </div>
  </div>
  <div class="z-accordion-item text-vanilla-200">
    <div class="flex items-center transition-all duration-700 ease-in-out group cursor-pointer"><span class="flex-1 font-medium">Feedback</span> <svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="transform transition-all duration-DEFAULT ease-in-out group stroke-1.5 z-icon w-6 h-6 z-icon--chevron-right text-slate group-hover:text-vanilla-200">
        <polyline points="9 18 15 12 9 6"></polyline>
      </svg></div>
    <div class="overflow-hidden transition-max-height duration-300 ease-in-out text-sm leading-6 max-h-0">
      <div>Consistent with real life: in line with the process and logic of real life, and comply with languages and habits that the users are used to;</div>
      <div>Consistent within interface: all elements should be consistent, such as: design style, icons and texts, position of elements, etc.</div>
    </div>
  </div>
  <div class="z-accordion-item text-vanilla-200">
    <div class="flex items-center transition-all duration-700 ease-in-out group cursor-pointer"><span class="flex-1 font-medium">Efficiency</span> <svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="transform transition-all duration-DEFAULT ease-in-out group stroke-1.5 z-icon w-6 h-6 z-icon--chevron-right text-slate group-hover:text-vanilla-200">
        <polyline points="9 18 15 12 9 6"></polyline>
      </svg></div>
    <div class="overflow-hidden transition-max-height duration-300 ease-in-out text-sm leading-6 max-h-0">
      <div>Consistent with real life: in line with the process and logic of real life, and comply with languages and habits that the users are used to;</div>
      <div>Consistent within interface: all elements should be consistent, such as: design style, icons and texts, position of elements, etc.</div>
    </div>
  </div>
</div>
`;
